tests/ui/transmute-mut-src-not-intobytes.stable.stderr
error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
   --> $DIR/transmute-mut-src-not-intobytes.rs:23:36
    |
 23 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
    |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `IntoBytes` is not implemented for `Src`
   --> $DIR/transmute-mut-src-not-intobytes.rs:15:1
    |
 15 | struct Src;
    | ^^^^^^^^^^
    = note: Consider adding `#[derive(IntoBytes)]` to `Src`
    = help: the following other types implement trait `IntoBytes`:
              ()
              AtomicBool
              AtomicI16
              AtomicI32
              AtomicI64
              AtomicI8
              AtomicIsize
              AtomicU16
            and 68 others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
   --> $WORKSPACE/src/util/macro_util.rs:792:26
    |
790 |     pub fn transmute_mut(self) -> &'a mut Dst
    |            ------------- required by a bound in this associated function
791 |     where
792 |         Src: FromBytes + IntoBytes,
    |                          ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::transmute_mut`
    = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
